finish implementing relevant controller functions for votes. rebuild swagger
