# controllers/votesController.js
@@ -5,6 +5,11 @@ const db = require('../db/db');
 
 
 exports.create = async function (req, res) {
+    /*
+    #swagger.tags = ['Vote']
+    #swagger.description = 'Crear un voto a favor de un precio'
+    */
+
     const {UserKey, PriceKey} = req.body;
 
     const vote = new Vote({
@@ -25,9 +30,13 @@ exports.create = async function (req, res) {
 
 }
 exports.delete = function (req, res) {
-    const {id} = req.params;
+    /*
+    #swagger.tags = ['Vote']
+    #swagger.description = 'Borrar un voto a favor de un precio'
+    */
+    const {UserKey, PriceKey} = req.body;
 
-    Vote.findByIdAndDelete(id)
+    Vote.findOneAndDelete({UserKey, PriceKey})
     .then((deletedDoc) => {
       res.send("Deleted succesfully: " + deletedDoc);
     })
@@ -38,21 +47,18 @@ exports.delete = function (req, res) {
 
 
 exports.findUserVote = function (req, res) {
-    const {userId} = req.params;
+    /*
+    #swagger.tags = ['Vote']
+    #swagger.description = 'Encontrar si usuario votó a favor de un precio'
+    */
+    const {userId, priceId} = req.body;
 
-    Vote.findOne({UserKey: userId})
+    Vote.findOne({userId, priceId})
     .then(doc => {
-        // The if-else may be unnecessary
-        if (!doc) {
-            res.send({
-                doc: null
-            });
-        }
-        else {
-            res.send({
-                doc,
-            })
-        }
+        // Test if no doc returns null
+        res.send({
+            doc: doc
+        })
 
     })
     .catch(err => {
@@ -60,9 +66,24 @@ exports.findUserVote = function (req, res) {
     })
 }
 
-exports.getPriceVotes = function (req, res) {
+exports.getVoteCount = function (req, res) {
+    /*
+    #swagger.tags = ['Vote']
+    #swagger.description = 'Devolver la cuenta de votos'
+    */
+
     const {priceId} = req.params;
-    // TODO
+    
+    Vote.countDocuments({PriceKey: priceId})
+    .then(count => {
+        res.send({
+            PriceKey: priceId,
+            count: count
+        })
+    })
+    .catch(err => {
+        res.status(500).send(err);
+    })
 
 }
 
