# routes/api/votes.js
@@ -7,12 +7,12 @@ router.post("/", vote.create);
 
 router.post("/delete/:id", vote.delete);
 
-router.get("user/:userid", vote.findUserVote);
+router.get("user/:userid/:voteid", vote.findUserVote);
 
-router.get("price/:priceid", vote.getPriceVotes);
+router.get("price/:priceid", vote.getVoteCount);
 
-router.get("/of/:userId", vote.getVotesOfUser);  // might not be necessary
+// router.get("/of/:userId", vote.getVotesOfUser);  // might not be necessary
 
-router.get("/", vote.getAll);
+// router.get("/", vote.getAll);
 
 module.exports = router;
